--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -7,7 +7,7 @@
     <title>Meu primeiro site em repositorio </html></title>
 </head>
 <body>
-   <h1>olá, mundo  </h1> 
+   <h1>olá, mundo...</h1> 
 </body>
 <hr>
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci omnis id, debitis nam facilis maiores? Blanditiis, quod dolorum eos doloremque, nam cum possimus porro voluptates sed odio aliquam. Fuga, nemo.</p>
